--- a/src/books/BookList.module.css
+++ b/src/books/BookList.module.css
@@ -1,3 +1,12 @@
 .cardList{
     margin-top: 20px;
 }
+
+.controlButtons{
+    margin-top: 15px;
+}
+
+.controlButtons__button{
+    width:50px;
+    height:50px;
+}
