Admin can add books

--- a/src/books/BookItem.module.css
+++ b/src/books/BookItem.module.css
@@ -5,3 +5,12 @@
 .control_button{
     margin:10px;
 }
+
+.bookPhoto{
+    height:200px;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    margin:0;
+    padding:0;
+}
