--- a/src/userPage/BookItem.module.css
+++ b/src/userPage/BookItem.module.css
@@ -1,3 +1,24 @@
 .cardWrapper{
     padding: 10px;
 }
+
+.control_button{
+    margin:10px;
+}
+
+.bookPhoto{
+    height:200px;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    margin:0;
+    padding:0;
+}
+
+.price{
+    font-weight: bolder;
+}
+
+.price em{
+    color:green;
+}
