--- a/src/books/BookList.module.css
+++ b/src/books/BookList.module.css
@@ -1,12 +1,24 @@
+.mainWrapper{
+    height: 100%;
+}
 .cardList{
     margin-top: 20px;
 }
 
 .controlButtons{
-    margin-top: 15px;
+    padding-top: 15px;
 }
 
 .controlButtons__button{
     width:50px;
     height:50px;
+}
+
+.noBooksDiv{
+    background-image:url("/noBooksLogo.jpg") ;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: auto;
+    opacity: 0.1;
 }
