--- a/src/myBooks/BookList.module.css
+++ b/src/myBooks/BookList.module.css
@@ -1,3 +1,14 @@
+.mainWrapper{
+    height: 100%;
+}
 .cardList{
     margin-top: 20px;
+}
+.noBooksDiv{
+    background-image:url("/noBooksLogo.jpg") ;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: auto;
+    opacity: 0.1;
 }
